<resources>
    <string name="app_name">Your Location</string>
    <string name="text_view_lang">Longitude</string>
    <string name="text_view_lat">Latitude</string>
    <string name="send_sms">Send SMS</string>
    <string name="getLocation">Get Location</string>
    <string name="convert_location_button">Get Address</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="get_location_first">get Location first</string>
    <string name="notValid_number">Enter valid number and try again</string>


</resources>